@@ -5,6 +5,8 @@ use SPVM::Builder::Config;
 
 my $config = SPVM::Builder::Config->new_c99;
 
+$config->use('Unicode');
+
 $config->optimize('-O2');
 $config->force(1);
 $config->add_source_files('foo.c', 'bar.c', 'baz/baz.c');
