@@ -8,6 +8,7 @@ Revision history for SPVM
         [FIX BUGS]
         * Fix the document that ccflags and ldflags of SPVM::Builder::Config default value is empty string.
           The right description is an array reference that has default values.
+        * Fix the bug that SPVM::Builder::CC can't load resource include directories.
 
 0.9117  2021-01-12
         [CHANGES]
